<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            app:subtitleTextColor="@android:color/background_light"
            app:titleTextColor="@android:color/background_light">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trigger_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_view_pushable_rect"
                android:elevation="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/touch_time"
                android:textSize="90sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edit_text_rect"
                android:elevation="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/interval_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="2"
                    android:gravity="right|center"
                    android:text="@string/repeatable"/>

                <CheckBox
                    android:id="@+id/checkbox_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="3.1"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/alarm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edit_text_rect"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/label"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/add_button_rect"
                    android:elevation="5dp"
                    android:text="@string/cancel"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_button_rect"
                    android:elevation="5dp"
                    android:text="@string/start"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>