<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stateListAnimator="@null">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape"
        android:stateListAnimator="@null"
        app:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:stateListAnimator="@null">

            <ImageButton
                android:id="@+id/add_job_scheduller"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:background="@drawable/add_button_rect"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                app:srcCompat="@drawable/alarm_manager_add_button"/>

            <ImageButton
                android:id="@+id/add_alarm_manager"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:background="@drawable/add_button_rect"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                app:srcCompat="@drawable/job_scheduller_add_button"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarm_manager_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_rect"
                android:elevation="5dp"
                android:gravity="center"
                android:text="@string/alarm_manager_header"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/alaarm_manager_element"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_alarm_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/alarm_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/text_view_rect"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/trigger_time_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="TextView"
                            android:textSize="24sp"/>

                        <CheckBox
                            android:id="@+id/repeatable_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/repeatable"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/cancel_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/add_button_rect"
                            android:text="@string/cancel"
                            android:textColor="@android:color/background_light"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/job_sheduler_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/header_rect"
                android:elevation="5dp"
                android:gravity="center"
                android:text="@string/job_scheduler_header"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:visibility="invisible"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
